assets/css/aeropt.css
/* ... */
.profile-engagements__header {
  margin: 10px 20px;
  border-bottom: 1px solid #f1ede6;
}

.profile-engagements__wrapper {
  position: relative;
  overflow: hidden;
  height: 350px;
}

.profile-engagements__list {
  display: flex;
  flex-direction: column;
  gap: 10px;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding: 10px 20px;
  animation: scrollEngagements 20s linear infinite;
}

.profile-engagement__item {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 20px;
  padding: 10px 15px;
  background-color: #fff;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  transition: background-color 0.3s ease, box-shadow 0.3s ease;
}

.profile-engagements__wrapper:hover .profile-engagements__list {
  animation-play-state: paused;
}

.partner-logos__wrapper:hover .partner-logos__track {
  animation-play-state: paused;
}

footer {
  background-color: var(--primary-color);
  border-bottom: 10px solid var(--secondary-color);
  background-image: url("../images/footer-bg-image.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: bottom;
}

footer .cta-banner {
  background-image: none;
}

.footer__copyright p {
  font-size: 14px;
}

.footer__policy--links p {
  font-size: 14px;
  border-top: 0.5px solid #ffffff;
  padding-top: 10px;
}

.footer__location {
  border-left: 2px solid #fafafa;
  min-height: 100px;
}

.footer__location p {
  font-size: 14px;
}

.footer__newsletter-form {
  display: flex;
  align-items: center;
  margin-top: 15px;
  width: 100%;
}

.footer__newsletter-input {
  flex: 1;
  padding: 10px 15px;
  border: none;
  border-radius: 10px 0 0 10px; /* Left rounded corners */
  color: #fff; /* Input text color */
  background-color: #dfe2e399; /* Light grey background */
  outline: none;
  height: 44px;
}

.footer__newsletter-input::placeholder {
  color: #fff; /* Placeholder text color */
}

.footer__newsletter-button {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 10px 15px;
  background-color: #d5ac6c; /* Gold background */
  color: var(--primary-color); /* Button text color */
  font-weight: bold;
  height: 44px;
  border: none;
  border-radius: 0 10px 10px 0; /* Right rounded corners */
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.footer__newsletter-button:hover {
  background-color: #b59458; /* Darker gold on hover */
}

@keyframes scrollEngagements {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-50%);
  }
}

@keyframes scrollLogos {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-100%);
  }
}

@media (max-width: 1200px) {
  .footer__newsletter-form {
    flex-direction: column;
    gap: 10px;
  }

  .footer__newsletter-input {
    border-radius: 25px;
    width: 100%;
  }

  .footer__newsletter-button {
    border-radius: 25px;
    width: 100%;
  }
}

@media (max-width: 768px) {
  .timeline__line {
    left: 23px;
  }

  .timeline__plane-icon {
    left: 23px;
  }

  .timeline-item__indicator {
    width: 40px;
    height: 40px;
  }

  /* Success Section (VK) */
  .success__heading {
    margin-bottom: 40px;
  }
  .success__image {
    margin-bottom: 6px;
  }
  .success__nav-button {
    width: 40px;
    height: 40px;
  }
  .success__pagination {
    position: relative;
    margin-top: 2rem;
    padding-left: 1rem;
  }
  .success__subtitle {
    font-size: 24px;
    line-height: 30px;
  }

  .success__link {
    font-size: 14px;
    line-height: 24px;
  }

  /*---------Capabilities Section (VK)----------*/
  .capabilities__heading {
    margin-bottom: 40px;
  }

  .capabilities__center {
    display: none;
  }

  .capabilities__container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
  }

  .capabilities__items.reverse {
    background: linear-gradient(90deg, #d5ac6c 0%, #ffffff 100%);
    border-left: 2px solid var(--text-color);
    border-right: 0px;
  }

  .capabilities__items.reverse:hover {
    background: linear-gradient(90deg, #d5ac6c 50%, #ffffff 100%);
  }
  .capability__description.reverse,
  .capability__description {
    margin-top: 0;
    border-top: 2px solid rgba(71, 94, 105, 0.5);
    border-right: none;
    border-left: none;
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
  }

  .capabilities__items--left,
  .capabilities__items--right {
    width: 100%;
    align-items: center;
  }

  .capabilities__items,
  .capabilities__items.is-even {
    width: 100%;
    max-width: 345px;
  }

  .info-card {
    background-color: var(--secondary-color);
  }

  .info-card__title {
    color: var(--primary-color);
  }

  .info-card__main-card {
    background-color: var(--secondary-color);
  }

  .info-card__main-card--title {
    color: var(--primary-color);
  }
}

